# rfc_guided_fuzzing

./: .gitignore  LICENSE  README.md  lib.rs
agent_deploy/: .gitignore  Readme.md  agent_control.py  backup_rule_extraction.py  prompt_bot_template.py  requirements.txt  rule_classify.py  rule_extraction.py  semantic_analysis.py  violation_generation.py
agent_deploy/prompt/: system_prompt_rule_extraction.txt  system_prompt_semantic_analysis.txt  system_prompt_violation_generation.txt
agent_deploy/reference/: REAMME.md  (+2 more)
auto_code_summarization/: chatgpt4.ipynb  chatgpt4azure.ipynb  gpt-4.py  readme.md
code_parse/: CMakeLists.txt  Check.cpp
code_parse/grammar/: CBaseListener.cpp  CBaseListener.h  CLexer.cpp  CLexer.h  CLexer.tokens  CListener.cpp  CListener.h  CParser.cpp  CParser.h
code_parse/tool/lib/: antlr4-runtime.lib
code_summarization/: .gitignore  Cargo.toml  README.md
code_summarization_xyf/: .gitignore
custom_mutator/: Cargo.toml  README.md  tmp.txt
custom_mutator_python/: custom_mutator.py  readme.md
dns_cache_poison/: Cargo.toml
example_analysis/: id-0441-analysis-1.txt  id-0441-analysis-2.txt  id-0441-analysis-3.txt  id-0441.txt
extract_info/: Cargo.toml  README.md
file_splitter/: .gitignore  Cargo.toml  schannel.txt  test3.txt
file_splitter_personal/: .gitignore  Cargo.toml  README.md  schannel2.txt
icmpv6_ping/: Cargo.toml
icmpv6_ping/src/: windows_ping.rs
icmpv6_ping/src/windows_ping/: ping_future.rs  ping_v4.rs  ping_v6.rs
json_parse_test/: Cargo.toml  output.csv
json_test/: Cargo.toml
logforth_test/: Cargo.toml
mutator_generation/: auto_rule_extraction.py  rule_extraction.py  simple.py  test_pattern.py  test_pattern2.py
openai_key_call/: Cargo.toml  Readme.md  config.toml  key
pcap_init/: Cargo.toml
pnet_test/: Cargo.toml
pyo3_learn/: Cargo.toml  success_result.bk
pyo3_learn/agent_input_source/: parsed_results.csv  result_wait_check.csv  rfc8446_sections.csv  rfc8446_sections_test.csv  rfc_sections_test.csv  rfc_sections_test_2.csv
pyo3_learn/src/: main.rs  test.py
rfc_manage/: Cargo.toml  README.md
rfc_processor/: Cargo.toml  README.md
rfc_processor/example/: 8446_slice_008_4_2_1__HandshakeProtocol_Extensions_SupportedVersions_.txt
rfc_processor/src/: download.rs  lib.rs  main.rs  process.rs  slice.rs  utils.rs
rfc_processor/state_machine_code/client/: client.c  client.html  reference.txt
rfc_processor/state_machine_code/server/: reference.txt  server.c  server.html
rule_auto_extraction/: Cargo.toml
rule_auto_extraction/agent_input_source/: rfc_description_extract_rule_4.csv  rfc_description_extract_rule_4_tmp.csv  rfc_results.csv  rfc_results_generate_violation.csv  rfc_results_slice_rule.csv  rfc_results_update_judge.csv  rfc_results_update_judge_test.csv  rfc_results_update_slice_rule.csv  rfc_sliced_description_2.csv  rfc_sliced_description_2_tmp.csv  rfc_sliced_description_filter_3.csv  rfc_test_mutation_guideline_6.csv  rfc_test_mutation_guideline_6_tmp.csv  rule_simple_violation_input.csv  rule_simple_violation_input_test.csv
rule_auto_extraction/agent_input_source_backup/: rfc_description_extract_rule_4.csv  rfc_description_extract_rule_4_tmp.csv  rfc_sliced_description_2.csv  rfc_sliced_description_filter_3.csv  rfc_violation_generation_filter_rule_5.csv
rule_auto_extraction/backup/: rfc_description_extract_rule_4_tmp.csv  rfc_results_classify_slice_rule.csv  rfc_results_extracted_rule.csv  rfc_results_slice_rule.csv  rfc_results_update_judge.csv  rfc_results_used_violation_rule.csv  rfc_sliced_description_filter_3.csv  rfc_test_mutation_guideline_6_tmp.csv  rule_simple_mutation.csv
rule_auto_extraction/backup/backup_agent_input_source/: rfc_results.csv  rfc_results_extracted_rule.csv  rfc_results_filter_classify_rule_complex.csv  rfc_results_filter_classify_rule_simple.csv  rule_simple_mutation.csv
rule_auto_extraction/output/: rfc_results.csv
rule_auto_extraction/output/RFC-8446/: rfc_info.txt  sections.txt
rule_auto_extraction/output/RFC-8446/slice/: 8446_slice_015.txt  8446_slice_016.txt  8446_slice_017.txt  8446_slice_018.txt  8446_slice_019.txt  8446_slice_020.txt  8446_slice_021.txt  8446_slice_022.txt  8446_slice_023.txt  8446_slice_024.txt  8446_slice_025.txt  8446_slice_026.txt  8446_slice_027.txt  8446_slice_028.txt  8446_slice_029.txt  8446_slice_030.txt  8446_slice_031.txt  8446_slice_032.txt  8446_slice_033.txt  8446_slice_034.txt  8446_slice_035.txt  8446_slice_036.txt  8446_slice_037.txt  8446_slice_038.txt  8446_slice_039.txt  8446_slice_040.txt  8446_slice_041.txt  8446_slice_042.txt  8446_slice_043.txt  8446_slice_044.txt  8446_slice_045.txt  8446_slice_046.txt  8446_slice_047.txt  8446_slice_048.txt  8446_slice_049.txt  8446_slice_050.txt  8446_slice_051.txt  8446_slice_052.txt  8446_slice_053.txt  8446_slice_054.txt
rule_auto_extraction/output/RFC-8446/slice_test/: 8446_slice_017.txt
rule_auto_extraction/python_scripts/: auto_rule_extraction.py  classify_rule.py  extract_rule.py  generate_mutation.py  generate_violation.py  slice_rfc.py
rule_auto_extraction/running_example/: duplicate_action.example  insert_action.example  pre_shared_key.bp  remove_action.example  set_action.example  swap_action.example
rule_auto_extraction/src/: lib.rs  main.rs  processing_script.rs  python_csv_processor.rs  rfc_download.rs  rfc_section_processor.rs  rfc_section_slice.rs  rust_csv_processor.rs  script.rs  slice.rs  utils.rs
server-bot-quick-start/: prompt_gpt4_bot.py  violation_generation.py
swap_check/: Cargo.toml
test_tokio/: Cargo.toml
tls_handshake/: Cargo.toml  README.md  complicated_test.py  openssl.py  openssl_high.py  simple.py  simple_test.py  wait_fuzz.py
tls_handshake/input_source/: mutation_guideline.csv  rfc_test_mutation_guideline_6.csv
tls_handshake/src/: backup.pass  clienthello.rs  clienthello_mutator.rs  clienthello_parser.rs  lib.rs  main.rs  network_connect.rs  server_response.rs  terminal.rs
tls_handshake/tls_reference/: real_clienthello_with_psk.pcapng  rustls.rs  tls1.3_psk_sessionid.pcapng
(+19943 files in other folders)
