[package]
name = "icmpv6_ping"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
regex = "1.11.1"
encoding_rs = "0.8.35"
pnet = "0.35.0"
chrono = "0.4"
[target.'cfg(unix)'.dependencies]
mio = { version = "1.0.3", features = ["os-poll", "os-ext", "net"] }
socket2 = { version = "0.5.8", features = ["all"] }
paste = "1"


[target.'cfg(windows)'.dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
]