[package]
name = "pyo3_learn"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.22.5", features = ["auto-initialize"] }
num_cpus = "1.16.0"
tokio = { version = "1.41.0", features = ["full"] }
futures = "0.3.31"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
csv = "1.3.0"
