[package]
name = "rfc_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["blocking"] }
lazy_static = "1.4"
colored = "2.0"
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3"
rayon = "1.10.0"
[dev-dependencies]
mockall = "0.13"
tempfile = "3.13.0"