[package]
name = "rule_auto_extraction"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["blocking"] }
lazy_static = "1.4"
colored = "2.0"
tokio = { version = "1.41.0", features = ["full"] }
futures = "0.3.31"
rayon = "1.10.0"
csv = "1.3.0"
ctrlc = "3.4.5"
[dev-dependencies]
mockall = "0.13"
tempfile = "3.13.0"
