[package]
name = "rule_auto_extraction"
version = "0.2.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
lazy_static = "1.4"
colored = "2.0"
tokio = { version = "1.41.1", features = ["full"] }
futures = "0.3.31"
rayon = "1.10.0"
csv = "1.3.1"
ctrlc = "3.4.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
rand = "0.8.5"
pyo3 = { version = "0.23.1", features = ["auto-initialize"] }
num_cpus = "1.16.0"
[dev-dependencies]
mockall = "0.13"
tempfile = "3.14.0"

