[package]
name = "tls_handshake"
version = "0.1.0"
edition = "2021"

[dependencies]
rustls = "0.23.17"
webpki-roots = "0.26.7"
phf = { version = "0.11", features = ["macros"] }
clap = "4.5.23"
termcolor = "1.4.1"
colored = "2.2.0"
mio = { version = "1.0.3", features = ["net", "os-poll"] }
pki-types = { package = "rustls-pki-types", version = "1.10.1", features = ["std"] }
rand = "0.8.5"
base64 = "0.22.1"
hex = "0.4.3"
log4rs = "1.3.0"
log = "0.4.22"
csv = "1.3.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
encoding_rs = "0.8.35"